Working on User report

--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -72,6 +72,7 @@ button {
   background-color: white;
   color: var(--primary);
   border: 2px solid var(--primary);
+  border-radius: 5px;
 }
 
 /* custom */
